--- a/src/content/posts/translations/alexandrian-hexcrawl-5e-2.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-5e-2.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Исследование гексов в пятой редакции D&D"
+title: "Исследование гексов в пятой редакции D&D - Часть 2: Путешествие по диким землям"
 date: "2023-09-18 12:00"
-description: "Первая статья Александриана из цикла про гекскраул в пятой редакции D&D #alexandrian #gmtips #hexcrawl"
+description: "Вторая статья Александриана из цикла про гекскраул в пятой редакции D&D #alexandrian #gmtips #hexcrawl"
 tags: 
   - "Alexandrian"
   - "Советы Мастеру"
@@ -12,67 +12,182 @@ tags:
 author: Justin Alexander
 translator: Станислав "Drakzar" Иванов
 ---
-  
-Текст Justin Alexander от 01 марта 2021 года
+ Текст Justin Alexander от 27 марта 2021 года
 
-Перевод: Станислав Иванов
+![Исследование гексов в 5E – Часть 2: Путешествие по диким землям, изображение №1](https://cyborgsandmages.com/images/hexcrawl-5e-2-1.jpg) 
 
-![image](https://cyborgsandmages.com/images/hexcrawl-5e-1.jpg)
+Правила по исследованию диких земель можно разбить на четыре составляющих:
 
-Исследование гексов (гексокроул) – это игровая структура для проведения сценариев с путешествиями по дикой местности. И хотя изначально он был центральным компонентом опыта от D&D, со временем он угас. К 1989 году в продуктах можно было найти лишь несколько рудиментарных гексовых карт, и ни одна из них не была создана для гексокроула. Именно тогда вторая редакция Advanced Dungeons & Dragons полностью изъяла все соответствующие процедуры из книг правил.
+· Путешествия по диким землям, где будут правила по учету времени и определению пройденной дистанции.
 
-И лишь когда Necromancer Games вернули в печать Wilderlands, а кампания West Marches Бена Роббинса стала популярной, люди начали заново открывать утерянное искусство изучение гексов. В последние годы формат вернулся к процветанию благодаря выходу Kingmaker для Pathfinder и Tomb of Annihilation для пятой редакции D&D.
+· Действия во время смены, которые позволят путешествующим персонажам делать что-либо помимо движения.
 
-## Базовая структура исследования гексов
+· Навигация, предоставляющая структуру для определения, куда в действительности идут персонажи.
 
-Гексокроулы – это лишь один из способов вождения путешествия по дикой местности (можете почитать Thinking About Wilderness Travel ради других вариантов), и на самом деле существует множество разных типов гексокроулов и школ того, как их нужно создавать и водить. Однако «истинные» типы исследования гексов разделяют четыре общие черты.
+· Система столкновений, которая определяет то, с чем сталкиваются персонажи по пути.
 
-Они используют гексовую карту. Обычно ландшафт гекса передан визуально, а еще гекс пронумерован (либо напрямую или же перекрестной нумерацией всей карты). Дополнительные фишки вроде поселений, подземелий, рек, дорог и государств также зачастую отображены на карте.
+До определенной степени каждый из этих модулей можно использовать независимо от остальных, либо игнорируя какой-либо из них, либо, как в некоторых случаях, предполагая некое базовое его состояния.
 
-1. Контент привязан к гексовой карте. Через использование пронумерованных отсылок некоторые или даже все гексы привязаны к локациям и/или столкновениям.
-2. Механика путешествия определяет, как далеко персонажи могут продвинуться и куда они могут отправиться во время путешествия. После определения стартового гекса Мастер использует эти механики (и принятые игроками решения) для отслеживания передвижения.
-3. Когда персонажи заходят в гекс, ДМ должен сказать им тип ландшафта и определить, активируется ли связанный с этим местом контент: если да, то персонажи переживают некоторое событие, сталкиваются с монстрами или же обозревают область (Чаще всего шанс активации контента равен 100%).
+Например, вместо использования правил для путешествия по диким землям, вы можете просто сказать, что экспедиция всегда движется на 24 мили или 2 гекса в день, все еще используя правила по навигации для определения того, куда прибудут персонажи. Аналогично, вы можете использовать все правила по путешествию по дикой местности, чтобы значительно менять и подстраивать пройденную за день дистанцию, но одновременно игнорировать правила по навигации и просто отмечать преодоленную к месту назначения дистанцию.
 
-Вокруг этой базовой структуры вы можете построить множество дополнительных опций и альтернативных типов игры. К примеру, механики для случайных столкновений и навигации (или, что важнее, возможности потеряться) в неизученным пустошах весьма распространены. Процедуры по зачистке гексов ранее тоже были обычным делом, как в своем роде антитеза игре на основе крепостей.
+Однако все четыре модуля, конечно же, созданы для работы сообща, где результаты одного влияют и улучшают другие.
 
-## Исследование гексов «по Александриану»
+## Смены
+Смена – это базовая единица отсчета времени. Смена равна 4 часам.
 
-В 2012 году, до выхода пятой редакции, я написал Hexcrawls, серию статей, обсуждающих процедуры исследования гексов и предлагающих надежную структуру для подготовки и вождения подобных игр для третьей и изначальной редакции 1974 года.
+Определение времени во время смены: для случайной генерации конкретного времени во время смены, используйте 1d8 для определения получаса и 1d30 для минуты (если необходимо).
 
-У гексокроула «по Александриану» есть несколько ключевых дизайнерских целей.
+## Типы смен
+В день проходит шесть смен, каждая из которых может быть одним из трех типов:
 
-Во-первых, я хотел структуру, которая бы прятала гексы от игроков. После личных тестов я обнаружил, что абстракция гекса чрезвычайно удобна для Мастера (для отслеживания навигации, привязки столкновений и так далее), но она имеет негативное влияние на другую сторону ширмы: я хотел, чтобы игроки взаимодействовали с игровым миром, а не абстракцией. Поэтому гексы в моем гексокроуле были структурой, неизвестной для игроков.
+· Активная
 
-Во-вторых, структура была создана исключительно для исследования. Тем самым она включала в себя множество правил по ориентированию, возможности потеряться и вновь найти путь. Она была построена вокруг того, что игроки постоянно делали новые открытия (даже в местах, которые они ранее посещали).
+· Отдых
 
-В-третьих, к гексу были привязаны локации, а не сцены. Однако нет ничего необычного в том, что исследование гексов привязывает последние к гексам, как, например, в Wilderness of Magical Realm:
+· Путешествие
 
-Харизматичный музыкант сидит на камне, развлекая группу детей халфлингов. Он поет песни о великих приключениях и битвах с орками.
+Во врем путешествия предполагается, что экспедиция тратит две смены в день на путь, две – на отдых и две – на другие занятия.
 
-И хотя система гексокроула «по Александриану» может использоваться подобным образом, я намеревался сделать акцент на содержимом, которое можно использовать больше одного раза, так как персонажи посещают одни и те же области несколько раз (что особенно полезно, когда вы водите открытый игровой стол). Другими словами, привязка к географии, а не чему-то мимолетному, где столкновения используются отдельно от прописанной легенды карты.
+Форсированный марш: если персонаж тратит больше двух смен на путь в день, он должен сделать проверку Телосложения (DC 10 + 1 за каждый час пути сверх меры). В случае провала он испытывает уровень истощения.
 
-В-четвертых, система построена вокруг предположения, что каждый гекс прописан. У этого могут быть редкие исключения – неожиданно «пустой» гекс, например, но, если это случается часто, значит, что ваше исследование гексов имеет неверный масштаб. Обычно это приводит к двум проблемам на игре: во-первых, это создает очень плохой ритм повествования (с долгими периодами времени, где решения по ориентированию не приносят интересного опыта в форме контента). Во-вторых, нехватка содержимого приравнивается к отсутствию структуры. Очевидный пример подобного – гексокроулы с большими пустыми пространствами не имеют достаточно заметных ориентиров для осуществления навигации.
+Темп путешествия
+Во время каждой смены экспедиция определяет свой темп путешествия.
 
-(Вы также столкнетесь с подобными проблемами, если у вас много чрезмерно набитых гексов, включающих в себя множество локаций, привязанных к каждому из них: абстракция гекса перестает работать и процедуры вашего исследования разрушаются, так как персонажи постоянно вовлечены в ориентирование на уровне внутри гекса).
+Нормальный: экспедиция, путешествующая с нормальным темпом, не может делать проверки Скрытности предотвращения обнаружения.
 
-## (Множество) правил пятой редакции по путешествиям в дикой местности
+Медленный: двигаясь с медленной скоростью, экспедиция намеренно осторожна. Делая это, экспедиция:
 
-После выхода пятой редакции меня часто просили обновить гексокроул «по Алексадриану» под новую систему. К сожалению, она включает в себя некоторые вещи, которые делают этот процесс сложнее, чем кажется на первый взгляд.
+· Получает преимущество на проверки навигации.
 
-Во-первых, пятая редакция не создана для исследования гексов. В третью редакцию оно тоже не было включено, но ее правила были основаны на традициях механики, которая изначально поддерживала игру в гексокроулы, и тем самым было весьма просто перенести эти процедуры на новую механику.
+· Может использовать Скрытность.
 
-Иронично, что пятая редакция вновь вернула гексовые карты в базовые книги правил, но механически упростила или же избавилась от основных элементов механики, которые делали исследование гексов (или, если говорить вообще, вызовы исследования дикой местности) возможным на игре.
+· Шанс столкновений помимо исследовательских снижен вдвое (Если подобное столкновение генерируется, есть 50% шанс, что оно не случится).
 
-Во-вторых, правила по путешествию по открытой местной и изучению диких земель в пятой редакции слегка… неудобны.
+Исследовательский: во время исследования предполагается, что экспедиция проверяет боковые тропы, изучает интересные объекты и так далее, поэтому:
 
-· Правила беспорядочно раскиданы по книгам правил и их сложно собрать в какую-либо удобоваримую процедуру.
+· Не может использовать Скрытность.
 
-· Правила на деле изменяются от книги к книге: процедуры исследования и путешествий из, например, Tomb of Annihilation, немного отличаются от тех, что есть в базовых книгах. А то, что содержится в Wilderness Kit, вновь отличается от них.
+· Получает преимущество на проверки навигации.
 
-· Правила расплывчаты и озадачивают своей непоследовательность. Например, есть отдельное правило о том, сколько фунтов еды вам нужно каждый день. А еще есть отдельное правило о том, сколько фунтов еды вы можете собрать во время путешествия, занимаясь Собирательством. Похоже, что эти вещи должно были быть объединены, но правило говорит, что частота проверки Собирательства «когда ДМ решит, что это необходимо». Что может быть каждым часом, каждым днем, каждой неделей или чем угодно.
+· Шанс столкновений удвоен.
 
-· Большая часть правил по дикой местности не содержится в SRD, что делает их недоступными для проектов вне Dungeon Master’s Guild.
+Быстрый: быстро двигаясь по диким землям, экспедиция движется так, что:
 
-И хотя в прошлом эти факторы останавливали мои усилия, я решил более или менее принять хаос всего этого: ведь если нет четкого свода правил, тогда скорее всего никому не буде дела, если я их изменю.
+· Не может использовать Скрытность.
 
-Так что моя финальная задача – это сохранить макроструктуры исследования дикой местности пятой редакции, которые связаны с другими элементами игры – вроде того, как различные классы влияют на вашу скорость передвижения – но изменить и подогнать все, что нужно для работы гексокроула.
+· Испытывает помеху на проверки Мудрости (Внимательность).
+
+· Имеет -5 штраф на проверки навигации.
+
+## Базовая дистанция передвижения
+
+![Исследование гексов в 5E – Часть 2: Путешествие по диким землям, изображение №2](https://cyborgsandmages.com/images/hexcrawl-5e-2-2.jpg)
+
+Заметка: дневное передвижение согласно этой таблице основано на путешествии в две смены (8 часов); то есть полный день путешествия без форсированного марша.
+
+Продвинутое правило: Ездовые животные и средства передвижения
+Галоп: будучи на ездовом животном, вы можете передвигаться галопом в течение часа смены с нормальным или быстрым темпом. Во время этого часа вы движетесь в два раза быстрее вашей скорости быстрого темпа (Что приводит к дистанции передвижения за смену равной 18 милям при нормальном темпе или 22,5 милям при быстром).
+
+Если каждые 8 или 10 миль им доступны свежие ездовые животные, персонажи могут преодолеть большую дистанцию в таком темпе, но вне густонаселенных регионов это очень редко.
+
+Заметка: если вы используйте продвинутые правила передвижения партии (ниже), не используйте правило галопа.
+
+Наземные средства передвижения: выбирайте темп как обычно.
+
+Водные средства передвижения: дистанция ограничена скоростью судна. На некоторых кораблях персонажи смогут отдыхать или держать активные смены даже во время передвижения корабля. Это может также позволить ему двигаться до 24 часов в сутки, если экипаж может быть распределен на несколько вахт.
+
+Неподходящий ландшафт: большая часть наземных средств передвижения созданы для дорог, хотя многие вполне неплохи и на открытой местности (вроде прерии). На усмотрение ДМа средство передвижения в неподходящем ландшафте может быть ограничено медленным темпом, а каждую смену для передвижения будут необходимы проверки характеристик.
+
+Продвинутое правило: Скорость экспедиции
+Скорость экспедиции основана на скорости самого медленного ее участника.
+
+· За 1 час в нормальном темпе экспедиция может пройти свою скорость, деленную на 10, в милях.
+
+· При быстром темпе экспедиция движется на 150% от своей нормальной скорости.
+
+· При медленном темпе экспедиция проходит две трети своей нормальной скорости.
+
+· При исследовательском темпе экспедиция может пройти до половины своей нормальной скорости.
+
+· Считайте дистанцию за смену на основании скорости экспедиции в течение каждого часа.
+
+На таблицах ниже дистанции были округлены до ближайшей половины мили.
+
+Скорость экспедиции - почасовая
+
+![Исследование гексов в 5E – Часть 2: Путешествие по диким землям, изображение №3](https://cyborgsandmages.com/images/hexcrawl-5e-2-3.jpg)
+
+Скорость экспедиции - посменная
+
+![Исследование гексов в 5E – Часть 2: Путешествие по диким землям, изображение №4](https://cyborgsandmages.com/images/hexcrawl-5e-2-4.jpg)
+
+Заметка: вы можете также просто использовать базовую дальность передвижения для экспедиций, но использовать продвинутые правила для ее скорости в необычных обстоятельствах (магия, механизмы или, например, фантастическое ездовое животное).
+
+Продвинутое правило: Ландшафт
+Тип ландшафта изменяет скорость передвижения экспедиции.
+
+· Магистраль: магистраль – это прямая, широкая, мощеная дорога.
+
+· Дорога: дорога – это грязный тракт или что-то подобное.
+
+· Тропа: нерегулярная дорожка. Возможно, что не подходит для большинства средств передвижения и может позволить передвижение лишь друг за другом. Путешествие по бездорожью часто следует за местными тропами. Известная тропа не требует проверок навигации, но известная тропа, за которой плохо следят, потребует проверку навигации со сложностью 10.
+
+· Бездорожье: ландшафт без дорог – это дикий регион. +2 к сложности навигации.
+
+[Исследование гексов в 5E – Часть 2: Путешествие по диким землям, изображение №5](https://cyborgsandmages.com/images/hexcrawl-5e-2-5.jpg)
+
+Продвинутое правило: Состояния
+Некоторые климатические условия и события могут влиять на скорость передвижения экспедиции.
+
+[Исследование гексов в 5E – Часть 2: Путешествие по диким землям, изображение №6](https://cyborgsandmages.com/images/hexcrawl-5e-2-6.jpg)
+
+Ведомое вьючное животное: в нормальных условиях, погонщик может вести за собой число животных, равное его пассивной Мудрости (Обращение с животными).
+
+Плохая видимость: это состояние также дает помеху на проверки навигации и сбора провизии.
+
+Пересечение рек: этот штраф применим к любой смене, когда пересекается река. Он не применяется, если персонажи следуют по дороге с мостом, но используется, если они путешествуют напрямик и должны искать мост.
+
+Продвинутое правило: Преодоленное расстояние
+Дистанция, используемая на таблицах передвижения – это среднее значение. Действительно преодоленная дистанция за смену равна от 50% до 150% от него (2d6+3 x 10%).
+
+Персонажи могут точно узнать преодоленное расстояние прим помощи успешной проверки Мудрости (Выживания) против сложности ландшафта. В случае провала они узнают лишь среднее значение пройденного ими расстояния.
+
+Заметка дизайнера: назначение этого правила – усложнение точного составления карт (Вы гипотетически можете адаптировать подобное правило и для исследования подземелий, чтобы это было сложнее и там, хотя по причине используемых там отрезков времени это может быть весьма затруднительно).
+
+Продвинутое правило: Прокладка пути
+Прокладка пути – это специальный темп передвижения, который может использоваться в сочетании с другими. Он снижает скорость экспедиции наполовину, но также отмечает наиболее эффективный путь через дикие земли при помощи каких-либо знаков – краски, засечек, флагов и так далее.
+
+Когда путь проложен, он становится известным экспедиции для последующего использования.
+
+Скрытые знаки: по знакам путь может использовать любое существо. Однако прокладывая путь, персонаж, ответственный за знаки, может делать проверку Мудрости (Скрытности), чтобы замаскировать их, так что найти знаки возможно лишь с проверкой Мудрости (Внимательность) или Интеллекта (Расследование).
+
+Вам не нужно делать проверку, чтобы следовать своим скрытым знакам (или скрытым знакам известного вам ранее пути). Те, кто знает о существовании пути, но не ходил по нему, получают преимущество на проверку для нахождения знаков.
+
+Заметка: путевые знаки, включая скрытую разметку, могут быть встречены как исследовательская сцена в гексе, через которых проходит путь.
+
+Опциональное правило – старые пути: большая часть путевых знаков являются временными и скорее всего со временем исчезнут. Есть шанс 1 к 6, что за сезон путь станет потрепанным погодой; затем – требующим ремонта; и в конце концов совсем исчезнет.
+
+Те, кто путешествуют по потрепанному погодой пути, могут восстановить без затруднений, если только не идут в быстром темпе. Требующий же ремонта путь может быть восстановлен кем-либо путешествующим по нему лишь при прокладывающем путь темпе.
+
+Заметка: создание более постоянных путевых знаков вроде курганов, гравировок на камнях и так далее – это значительное и времязатратное занятие, однако оно может иметь смысл на часто используемых маршрутах.
+
+## Гексы
+
+![Исследование гексов в 5E – Часть 2: Путешествие по диким землям, изображение №7](https://cyborgsandmages.com/images/hexcrawl-5e-2-7.jpg)
+
+1 гекс = 12 миль (от центра к центру / стороны к стороне) = 7 миль каждая сторона = 124 квадратных мили
+
+Путешествие по гексовой карте абстрактно. Для определения того, вышла ли экспедиция из гекса, вам нужно следить за ее прогрессом внутри него.
+
+Путь начинается в гексе: если экспедиция начинает свое движение из гекса, ей нужно пройти 6 миль, чтобы дойти до выхода из него.
+
+Опциональное правило: вы можете решить быть предвзятым со стартовой позицией. Например, вы видите, что река течет рядом с западным краем гекса. Если персонажи начинают путешествие от реки, то им понадобится лишь 2 мили, чтобы выйти с западной стороны гекса, и 10 – с восточной.
+
+Пересечение гекса через дальнюю сторону: понадобится 12 миль прогресса, чтобы выйти из гекса с одной из трех противоположных сторон.
+
+Пересечение гекса через ближнюю сторону: понадобится 6 миль прогресса, чтобы выйти из гекса через одну из двух прилегающих сторон.
+
+Вернуться, как мы шли: если персонажи намеренно идут по своим же следам обратно, просто уменьшайте их прогресс, пока они не выйдут из гекса. Если по какой-либо причине (потерявшись, например) они выйдут через ту же сторону, что и вошли, им потребуется преодолеть дополнительные 1d6-1 миль, чтобы это сделать (если только обстоятельства не предполагают иного).
+
+![Исследование гексов в 5E – Часть 2: Путешествие по диким землям, изображение №8](https://cyborgsandmages.com/images/hexcrawl-5e-2-8.jpg)
+
