--- a/src/content/posts/translations/alexandrian-index.mdx
+++ b/src/content/posts/translations/alexandrian-index.mdx
@@ -148,9 +148,10 @@ tags:
 
 ## Цикл Hexcrawl 5e
 
-1 Исследование гексов в пятой редакции D&D
+1 [Исследование гексов в пятой редакции D&D - часть 1](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-2)
 
-2
+2 [Исследование гексов в 5E – Часть 2: Путешествие по диким землям](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-2)
+
 
 3 Исследование гексов в пятой редакции D&D - часть 3 - Действия во время смены
 
