--- a/src/content/posts/translations/alexandrian-index.mdx
+++ b/src/content/posts/translations/alexandrian-index.mdx
@@ -152,14 +152,13 @@ tags:
 
 2 [Исследование гексов в 5E – Часть 2: Путешествие по диким землям](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-2)
 
-
-3 Исследование гексов в пятой редакции D&D - часть 3 - Действия во время смены
+3 [Исследование гексов в пятой редакции D&D - часть 3 - Действия во время смены](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-3-watch-actions)
 
 4
 
 5
 
-6
+6 [Исследование гексов в пятой редакции D&D - часть 6 - порядок действий в смену](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-6-watch)
 
 7
 
@@ -301,6 +300,16 @@ tags:
 Инструмент для исследования гексов: Таблица слухов – Часть 2: Как узнать слухи
 
 Инструмент для исследования гексов: Таблица слухов – Часть 3: Восполнение вашей таблицы
+
+[Инструменты исследования гексов: Дальность обнаружения](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-tools-distance)
+
+[Дополнение к исследованию гексов: Свяжите ваши гексы](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-link-hexes)
+
+[Эррата на исследование гексов: Использование таблиц столкновений](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-errata-random-encounters)
+
+[Ролевые игры против Повествовательных](https://cyborgsandmages.com/posts/translations/alexandrian-roleplaying-vs-storytelling)
+
+[Игровые структуры: Система имеет значение](https://cyborgsandmages.com/posts/translations/alexandrian-game-structures-system-matter)
 
 Исследование точек интереса
 
