--- a/src/content/posts/core-d20/cored20-new-mechanics-1.mdx
+++ b/src/content/posts/core-d20/cored20-new-mechanics-1.mdx
@@ -6,6 +6,12 @@ tags:
   - Core d20 RPG
   - негативный уровень
   - сопротивление заклинаниям
+  - уменьшение урона
+  - массивный урон
+  - урон характеристикам
+  - истощение характеристики
+  - продолжительный урон
+  - чистый урон
 ---
 
 ## Негативный уровень
@@ -18,7 +24,7 @@ tags:
 
 Негативные уровни могут быть восстановлены только заклинаниями *Великое Восстановление* или *Желание*
 
-## Сопротивление заклинаниям
+## Устойчивость к заклинаниям
 
 **Устойчивость к заклинаниям** – это сверхъестественная особенность, которая есть у некоторых существ и может быть получена от некоторых волшебных предметов. 
 
