--- a/src/content/posts/core-d20/archetypes-index.mdx
+++ b/src/content/posts/core-d20/archetypes-index.mdx
@@ -1,6 +1,6 @@
 ---
-title: Индекс архетипов на сайте
-description: Индекс архетипов на сайте
+title: Индекс архетипов Core d20 RPG на сайте
+description: Индекс архетипов Core d20 RPG на сайте
 date: 2014-01-01
 tags:
   - архетип
