--- a/src/content/posts/core-d20/classes.mdx
+++ b/src/content/posts/core-d20/classes.mdx
@@ -15,3 +15,15 @@ tags:
 В базовых правилах Core d20 RPG мы рассматриваем 4 базовых класса - Боец, Клерик, Плут, Волшебник. Все остальные классы относятся к дополнительным и будут представлены в отдельном буклете.
 
 Описание каждого класса включает описание его особенностей, владений навыками и спасбросками, быстрое создание персонажа 1-ого уровня и несколько подклассов.
+
+## БОЕЦ
+
+## КЛЕРИК
+
+## ВОЛШЕБНИК
+
+## ПЛУТ
+
+
+
+
