--- a/src/content/singles/cored20rpg.mdx
+++ b/src/content/singles/cored20rpg.mdx
@@ -6,7 +6,9 @@ description: Созданная в сообществе Киборги и Чар
 
 ## РАБОЧИЕ ФАЙЛЫ
 
-Последняя версия для печати: [Версия для публикации](https://1drv.ms/w/s!Atcrhwwo1lBA4ZQg2JTWPATJlXZctQ?e=zsMbtK)
+Последняя версия для печати: [Версия для публикации](https://1drv.ms/w/s!Atcrhwwo1lBA4rJxN269ggsPOOkL4g?e=Y9GmLH)
+
+v.0020-18092023
 
 ## ДОПОЛНИТЕЛЬНОЕ
 
@@ -32,9 +34,27 @@ description: Созданная в сообществе Киборги и Чар
 
 05. НАСТРОЙКА ПЕРСОНАЖА
 
+06. СНАРЯЖЕНИЕ
+
+07. ХАРАКТЕРИСТИКИ, НАВЫКИ, ПРОВЕРКИ
+
+08. ПРИКЛЮЧЕНИЯ
+
+09. СРАЖЕНИЕ
+
+10. МАГИЯ
+
+11. ОПИСАНИЕ ЗАКЛИНАНИЙ
 
 ## БЕСТИАРИЙ
 
+01. ВИДЫ СУЩЕСТВ
+
+02. ОСОБЕННОСТИ ВИДОВ СУЩЕСТВ
+
+03. ШАБЛОНЫ
+
 ## РУКОВОДСТВО МАСТЕРА
 
+01. СОЗДАНИЕ ПРИКЛЮЧЕНИЙ
   
