--- a/src/content/posts/articles/savage-frontier-by-spriggan-den.mdx
+++ b/src/content/posts/articles/savage-frontier-by-spriggan-den.mdx
@@ -14,8 +14,16 @@ tags:
   - hex
 ---
 
+Гексагональные карты Дикого Фронтира. 
+
+Автор: [Spriggan Den](https://spriggans-den.com/2022/11/16/the-savage-frontier-hexmap-of-the-north/)
+
 [Чистая карта](https://cyborgsandmages.com/images/the_savage_frontier_by_yora_blank_map.png)
 
 [Версия для игроков](https://cyborgsandmages.com/images/the_savage_frontier_by_yora_player_map.png)
 
 [Версия для Мастера](https://cyborgsandmages.com/images/the_savage_frontier_by_yora_gm_map.png)
+
+[Древние Королевства](https://cyborgsandmages.com/images/the_savage_frontier_kingdoms.png)
+
+[Племена Утгардтцев](https://cyborgsandmages.com/images/the_savage_frontier_uthgardt.png)
