--- a/src/content/posts/translations/angrygm-index.mdx
+++ b/src/content/posts/translations/angrygm-index.mdx
@@ -33,9 +33,11 @@ author: Angry GM
 
 Выносите решения как мастер
 
-Потерянные навыки игрока: Коллер
+[Третий урок: дорогостоящие возможности и суровые реалии](https://cyborgsandmages.com/posts/translations/angrygm-the-third-lesson-costly-opportunities-and-harsh-realities)
 
-Потерянные навыки игрока: Маппер
+[Потерянные навыки игрока: Коллер](https://cyborgsandmages.com/posts/translations/angrygm-lost-player-skills-calling)
+
+[Потерянные навыки игрока: Маппер](https://cyborgsandmages.com/posts/translations/angrygm-lost-player-skills-mapping)
 
 Что делает исследование исследованием?
 
