--- a/src/content/posts/articles/alchemical-equipment.mdx
+++ b/src/content/posts/articles/alchemical-equipment.mdx
@@ -89,3 +89,13 @@ tags:
 Настойка - это экстракт, полученный из вещества, пропитанного спиртом.  
 Их не всегда употребляют в пищу. Для усиления эффекта их часто добавляют в другие жидкости и вещества, как магические, так и алхимические. Срок действия настойки постоянен, если не указано иное. 
 Чтобы выпить или применить настойку, обычно требуется одно стандартное действие, но до начала действия настойки проходит несколько секунд. Настойки начинают действовать в начале следующего хода алхимика после активации. 
+---
+
+
+## Индекс статей про алхимию
+
+[Лаборатория алхимика и его инструменты](https://cyborgsandmages.com/posts/articles/alchemy-lab)
+
+[Алхимические исследования](https://cyborgsandmages.com/posts/articles/alchemy-research)
+
+[Типы алхимического снаряжения](https://cyborgsandmages.com/posts/articles/alchemical-equipment)
