--- a/src/content/posts/articles/alchemy-lab.mdx
+++ b/src/content/posts/articles/alchemy-lab.mdx
@@ -17,7 +17,7 @@ tags:
 
 Предполагается, что для изготовления предметов алхимик имеет простой, базовый набор инструментов, если он находится в цивилизованной местности. Однако вы можете постановить, что в некоторых ситуациях и местах базовое алхимическое оборудование недоступно. В этом случае алхимик все равно может попытаться создать предмет, но при любой проверке у него будет помеха. Алхимик, имеющий соответствующую лабораторию, имеет преимущество при проверках на создание предметов. Обычные портативные алхимические принадлежности и портативная лаборатория просто позволяют выполнить проверку. 
 
-Алхимическая лаборатория стоит 200 gp и содержит 40 фунтов оборудования. Для нее требуется здание площадью не менее 400 кв. футов. Портативные алхимические лаборатории существуют, но встречаются редко и их трудно найти. Однако для их строительства и использования не требуется целое здание. Их стоимость составляет 75 gp, а вес - 20 фунтов в дополнение к алхимическим принадлежностям, необходимым для их хранения. Для их использования не требуется навык, превышающий навык алхимических принадлежностей; их использование включено в навык владения инструментами. 
+Алхимическая лаборатория стоит 200 зм и содержит 40 фунтов оборудования. Для нее требуется здание площадью не менее 400 кв. футов. Портативные алхимические лаборатории существуют, но встречаются редко и их трудно найти. Однако для их строительства и использования не требуется целое здание. Их стоимость составляет 75 зм, а вес - 20 фунтов в дополнение к алхимическим принадлежностям, необходимым для их хранения. Для их использования не требуется навык, превышающий навык алхимических принадлежностей; их использование включено в навык владения инструментами. 
 
 Конкретные предметы, входящие в лабораторию алхимика, обычно должны быть абстрактными, как часть алхимических принадлежностей в наборе инструментов, а более сложные конструкции просто считаются достаточной лабораторией, поставляемой за счет оплаты стоимости. Более подробная детализация может затянуть игру до мелочей. Тем не менее, немного вкуса и терминологии будет полезно как игроку, так и мастеру игры, поэтому ниже приводится общий список предметов. 
 
@@ -44,3 +44,13 @@ tags:
 **Звездные карты:** Астрологические карты, отображающие созвездия в различные времена года, являются важной частью алхимии. Получение более точных, чем другие, карт (или работа с теми, которые оказались не очень точными) может стать хорошим приключенческим крючком. 
 
 **Пробирки:** Штативы с небольшими стеклянными пробирками - неотъемлемый атрибут хорошо подготовленной лаборатории, особенно при проведении исследований. Если их плохо очищать между использованиями, они могут стать хорошим объяснением алхимического казуса 
+
+---
+
+## Индекс статей про алхимию
+
+[Лаборатория алхимика и его инструменты](https://cyborgsandmages.com/posts/articles/alchemy-lab)
+
+[Алхимические исследования](https://cyborgsandmages.com/posts/articles/alchemy-research)
+
+[Типы алхимического снаряжения](https://cyborgsandmages.com/posts/articles/alchemical-equipment)
