--- a/src/content/posts/articles/alchemy-research.mdx
+++ b/src/content/posts/articles/alchemy-research.mdx
@@ -44,3 +44,14 @@ tags:
 персонаж услышал слух или историю о заклинании или предмете в какой-то момент своего прошлого. Персонаж решает выяснить, как создать такой предмет. Персонаж начинает собирать информацию о предмете или заклинании. Это может быть история, время создания или использования, создатель, место создания - любые из этих фактов могут пригодиться при попытке повторить их работу.   
 
 Чтобы найти эту информацию, персонаж должен успешно пройти проверку Интеллекта (Расследование) или Харизмы (Убеждение), чтобы собрать информацию. Базовый КС этой проверки навыка для заклинаний равен 10 + удвоенный уровень заклинания. Базовый КС проверки навыка для алхимических и магических предметов зависит от редкости предмета. Успех этой проверки означает, что создатель теперь знает о существовании предмета и понимает о нем достаточно, чтобы приступить к поиску способа его изготовления. В отличие от обычной попытки собрать информацию, одна попытка этой проверки занимает 1к4 дня . Если персонаж проваливает проверку на 5 или более единиц, то информации в этой области нет, и персонаж должен повторить попытку в другом городе или поселении. Эта проверка может быть изменена в зависимости от размера поселения. В маленькой деревушке вероятность того, что кто-то знает о редком предмете, гораздо меньше. 
+
+---
+
+
+## Индекс статей про алхимию
+
+[Лаборатория алхимика и его инструменты](https://cyborgsandmages.com/posts/articles/alchemy-lab)
+
+[Алхимические исследования](https://cyborgsandmages.com/posts/articles/alchemy-research)
+
+[Типы алхимического снаряжения](https://cyborgsandmages.com/posts/articles/alchemical-equipment)
