--- a/src/content/posts/translations/alexandrian-valley-of-the-sapphire-waves-2023-update.mdx
+++ b/src/content/posts/translations/alexandrian-valley-of-the-sapphire-waves-2023-update.mdx
@@ -12,6 +12,7 @@ tags:
   - "AI"
   - "Midjourney"
 author: Justin Alexander
+cover: ~assets/covers/valley-sapphire-waves.jpg
 ---
 
 [Оригинал](https://thealexandrian.net/wordpress/49929/roleplaying-games/valley-of-the-sapphire-waves-2023-update#comments)
@@ -24,7 +25,7 @@ author: Justin Alexander
 
 Однако, называя чушь чушью, я в конечном итоге создал пример спонтанного дизайна в настольной ролевой игре, который было бы практически невозможно воспроизвести в движке компьютерной игры, даже если генераторы процедурного контента значительно превосходят все, что у нас есть. нам сегодня. (И тем более в 2012 или 2017 годах.)
 
-В этом не было ничего особенно впечатляющего, но было несколько фантастических моментов, которые, на мой взгляд, весьма запоминающиеся и которыми стоит поделиться, и поэтому я сделал это здесь, на Александрийском острове, еще в 2014 году.
+В этом не было ничего особенно впечатляющего, но было несколько фантастических моментов, которые, на мой взгляд, весьма запоминающиеся и которыми стоит поделиться, и поэтому я сделал это здесь, [на Александрийском острове](https://thealexandrian.net/wordpress/35572/roleplaying-games/valley-of-the-sapphire-waves), еще в 2014 году.
 
 Но вот в чем дело: сейчас мы определенно ближе к этому будущему, чем были в 2012 или 2014 году.
 
@@ -42,53 +43,56 @@ author: Justin Alexander
 
 Долина Сапфировых волн заполнена холмистыми полями с яркой голубой травой. Любой, кто стоит в водах долины, почувствует затмение солнца, потому что Гелиос оплакивает потерю своей первой жены (Ура-Богини рек, см. гекс 1).
 
+![image](https://cyborgsandmages.com/images/alley-of-sapphire-waves-1.png)
+
+
 ## Гекс 1
 
 Водопад Ур-Богини. Водопад высотой 300 футов в конце долины течет вверх, потому что это место, где тысячелетия назад была убита Ур-Богиня рек.
 
-Водопад Ур-Богини
+![Водопад Ур-Богини](https://cyborgsandmages.com/images/alley-of-sapphire-waves-3.png)
 
 ## Гекс 2
 
 Обелиск Лунного камня. Возведен как святое место еретическим культом Ур-Богини. Лунный камень исцелит любого, кто прикоснется к нему ночью, но под лучами солнца он проклят. (Любой, кто прикасается к нему, страдает как заклинание дарования проклятия .)
 
-Обелиск Лунного камня
+![Обелиск Лунного камня](https://cyborgsandmages.com/images/alley-of-sapphire-waves-4.png)
 
 ## Гекс 3
 
 Стирге-Майрес. Шанс встретить 1-6 стирджей составляет 1 из 3.
 
-Шахты стирджей
+![Шахты стирджей](https://cyborgsandmages.com/images/alley-of-sapphire-waves-5.png)
 
 ## Гекс 4
 
 Гоблины-мусорщики лунного камня. Небольшое племя гоблинов, собирающее лунные камни, разбросанные здесь по скалистым расщелинам.
 
-Гоблины-мусорщики лунного камня
+![Гоблины-мусорщики лунного камня](https://cyborgsandmages.com/images/alley-of-sapphire-waves-6.png)
 
 ## Гекс 5
 
 Долина Дриады. Этот лесной массив охраняет дриада, дух которой связан с энтом. Все белки здесь умеют говорить, многие стихийно формируются актерские труппы, исполняющие «Сон в летнюю ночь» .
 
-Белки исполняют «Сон в летнюю ночь»
+![Белки исполняют «Сон в летнюю ночь»](https://cyborgsandmages.com/images/alley-of-sapphire-waves-7.png)
 
 ## Гекс 6
 
 Кладбище культов лунного камня. Шанс 1 из 3 за ход встретить 1-3 тварей.
 
-Кладбище культов лунного камня
+![Кладбище культов лунного камня](https://cyborgsandmages.com/images/alley-of-sapphire-waves-8.png)
 
 ## Гекс 7
 
 Долина Медузы. Медуза поселилась в Воронке Скульптур.
 
-Медуза в воронке скульптуры
+![Медуза в воронке скульптуры](https://cyborgsandmages.com/images/alley-of-sapphire-waves-9.png)
 
 ## Гекс 8
 
 Сфинксы-хранители. Когда-то вход в долину охраняло великое племя сфинксов (их поместил туда Гелиос), но их численность исчерпана. 1 из 3 шансов встретить сфинкса, который в 75% случаев будет скелетом нежити. Остальные сфинксы перед атакой будут загадывать загадки, связанные с солнцем.
 
-Нежить-Сфинкс-Страж
+![Нежить-Сфинкс-Страж](https://cyborgsandmages.com/images/alley-of-sapphire-waves-10.png)
 
 ## В качестве заключения
 
