--- a/src/content/posts/translations/alexandrian-index.mdx
+++ b/src/content/posts/translations/alexandrian-index.mdx
@@ -383,6 +383,8 @@ Cypher v. Fate
 
 Как же плох Guidance в пятой редакции
 
+[Долина сапфировых волн – обновление 2023 года](https://cyborgsandmages.com/posts/translations/alexandrian-valley-of-the-sapphire-waves-2023-update)
+
 Модуль статуса кампании: Корреспонденция
 
 Модуль статуса кампании: Обновление списков
