--- a/src/content/posts/translations/alexandrian-hexcrawl-5e-1.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-5e-1.mdx
@@ -76,3 +76,13 @@ translator: Станислав "Drakzar" Иванов
 И хотя в прошлом эти факторы останавливали мои усилия, я решил более или менее принять хаос всего этого: ведь если нет четкого свода правил, тогда скорее всего никому не буде дела, если я их изменю.
 
 Так что моя финальная задача – это сохранить макроструктуры исследования дикой местности пятой редакции, которые связаны с другими элементами игры – вроде того, как различные классы влияют на вашу скорость передвижения – но изменить и подогнать все, что нужно для работы гексокроула.
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
