--- a/src/content/posts/translations/alexandrian-hexcrawl-5e-2.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-5e-2.mdx
@@ -191,3 +191,13 @@ translator: Станислав "Drakzar" Иванов
 
 ![Исследование гексов в 5E – Часть 2: Путешествие по диким землям, изображение №8](https://cyborgsandmages.com/images/hexcrawl-5e-2-8.jpg)
 
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
