--- a/src/content/posts/translations/alexandrian-hexcrawl-5e-3-watch-actions.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-5e-3-watch-actions.mdx
@@ -106,3 +106,13 @@ translator: Станислав "Drakzar" Иванов
 ## Первооткрыватель
 
 Когда экспедиция прокладывает путь (обратитесь к Продвинутому правилу: Прокладка пути), один участник должен для этого использовать свое действие смены. Если используются скрытые знаки, дополнительный персонаж может помогать первооткрывателю в его проверке Мудрости (Скрытности).
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
